tests/ui/traits/trait-upcasting/illegal-upcast-from-impl.next.stderr
error[E0308]: mismatched types
  --> $DIR/illegal-upcast-from-impl.rs:15:66
   |
LL | fn illegal(x: &dyn Sub<Assoc = ()>) -> &dyn Super<Assoc = i32> { x }
   |                                        -----------------------   ^ expected trait `Super`, found trait `Sub`
   |                                        |
   |                                        expected `&dyn Super<Assoc = i32>` because of return type
   |
   = note: expected reference `&dyn Super<Assoc = i32>`
              found reference `&dyn Sub<Assoc = ()>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
